--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "bson-modern"
-version = "1.0.0"
-description = "BSON codec for Python - modernized fork with Python 3.12+ support"
+version = "1.1.0"
+description = "BSON codec for Python - modernized fork with Python 3.9+ support (drop-in replacement for bson)"
 authors = [
     {name = "James Westover", email = "james@westover.dev"},
 ]
@@ -10,13 +10,16 @@ maintainers = [
 ]
 readme = "README.md"
 license = {text = "BSD-3-Clause"}
-requires-python = ">=3.12"
+requires-python = ">=3.9"
 keywords = ["BSON", "codec", "serialization", "mongodb"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: BSD License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3.14",
